made browserify work and added example

--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "grunt": "latest",
     "grunt-mocha-test": "latest",
     "grunt-contrib-watch": "latest",
-    "mocha": "latest"
+    "mocha": "latest",
+    "coffeeify": "~0.5.2",
+    "browserify": "~2.35.4",
+    "grunt-browserify": "~1.2.11"
   },
   "scripts": {
     "test": "grunt"
